cmake_minimum_required(VERSION 3.27)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(repro_bug)

# Set the output directory for the executables
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/lib")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/lib")

# Not sure if these will impact the bug
#add_compile_options(-pthread)
#add_link_options(-pthread)

# Add Corrade as a subproject
#set(CORRADE_BUILD_MULTITHREADED ${LCVIS_ENABLE_MULTITHREADING})
add_subdirectory(corrade EXCLUDE_FROM_ALL)

# Set targets GL versions before including magnum
set(MAGNUM_TARGET_GLES3 ON)
set(MAGNUM_TARGET_GLES2 OFF)
set(MAGNUM_WITH_SCENEGRAPH OFF)
set(MAGNUM_WITH_PRIMITIVES ON)
set(MAGNUM_WITH_MAGNUMFONT ON)
set(MAGNUM_BUILD_STATIC ON)
set(MAGNUM_BUILD_PLUGINS_STATIC ON)
#set(MAGNUM_BUILD_MULTITHREADED ${LCVIS_ENABLE_MULTITHREADING})

set(MAGNUM_WITH_STBTRUETYPEFONT
    ON
    CACHE BOOL "" FORCE)
set(MAGNUM_WITH_ANYIMAGEIMPORTER
    ON
    CACHE BOOL "" FORCE)
set(MAGNUM_WITH_GLTFIMPORTER
    ON
    CACHE BOOL "" FORCE)

# Add Magnum as a subproject
add_subdirectory(magnum EXCLUDE_FROM_ALL)
add_subdirectory(magnum-plugins EXCLUDE_FROM_ALL)

add_subdirectory(src)

